Live coding session 10 - Vicálvaro

--- a/PF-3/templates/3.1-HigherOrderFunctions.ipynb
+++ b/PF-3/templates/3.1-HigherOrderFunctions.ipynb
@@ -16,9 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36m$ivy.$                               \n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36m_root_.org.scalatest._\u001b[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import $ivy.`org.scalatest::scalatest:3.0.8`\n",
     "import _root_.org.scalatest._"
@@ -54,6 +67,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcompose\u001b[39m"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compose[A, B, C](f: B => C, g: A => B): A => C = \n",
+    "    (a: A) => f(g(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def curry[A, B, C](f: (A, B) => C): A => (B => C) = \n",
+    "    ???"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -69,22 +113,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36msum\u001b[39m"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sum(list: List[Int]): Int = \n",
-    "    ???"
+    "    list match {\n",
+    "        case Nil => 0\n",
+    "        case (head: Int) :: (tail: List[Int]) => \n",
+    "            val sumTail: Int = sum(tail)\n",
+    "            head + sumTail\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mmultiply\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def multiply(list: List[Int]): Int = \n",
-    "    ???"
+    "    list match {\n",
+    "        case Nil => 1\n",
+    "        case (head: Int) :: (tail: List[Int]) => \n",
+    "            val multiplyTail: Int = multiply(tail)\n",
+    "            head * multiplyTail\n",
+    "    }"
    ]
   },
   {
@@ -96,10 +172,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldRight\u001b[39m"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def foldRight(list: List[Int])(\n",
+    "    nil: Int, \n",
+    "    cons: (Int, Int) => Int): Int = \n",
+    "    list match {\n",
+    "        case Nil => nil\n",
+    "        case (head: Int) :: (tail: List[Int]) => \n",
+    "            val tailSol: Int = foldRight(tail)(nil, cons)\n",
+    "            cons(head, tailSol): Int\n",
+    "    }"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,22 +207,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36msum\u001b[39m"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sum(list: List[Int]): Int = \n",
-    "    ???"
+    "    foldRight(list)(\n",
+    "        0 , \n",
+    "        (head: Int, tailSum: Int) => head + tailSum : Int\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36msum\u001b[39m"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sum(list: List[Int]): Int = \n",
+    "    foldRight(list)(0 , _ + _)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres14\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m15\u001b[39m"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "List(1,2,3,4,5).foldRight(0)(_ + _)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres8\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m15\u001b[39m"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(List(1,2,3,4,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mmultiply\u001b[39m"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def multiply(list: List[Int]): Int = \n",
-    "    ???"
+    "    foldRight(list)(\n",
+    "        ??? : Int, \n",
+    "        (head: Int, tailSol: Int) => \n",
+    "            ??? : Int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mmultiply\u001b[39m"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def multiply(list: List[Int]): Int = \n",
+    "    foldRight(list)(\n",
+    "        1 : Int, \n",
+    "        (head: Int, tailMultiplication: Int) => \n",
+    "            head * tailMultiplication : Int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mmultiply\u001b[39m"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def multiply(list: List[Int]): Int = \n",
+    "    foldRight(list)(1, _ * _)"
    ]
   },
   {
@@ -137,10 +368,176 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36msorted\u001b[39m"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sorted(list: List[Int]): Boolean = \n",
+    "    list match {\n",
+    "        case Nil => true \n",
+    "        case head :: tail => \n",
+    "            val tailSorted: Boolean = sorted(tail)\n",
+    "            tail match {\n",
+    "                case Nil => true\n",
+    "                case head2 :: tail2 => \n",
+    "                    head < head2 && tailSorted\n",
+    "            }\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36msorted\u001b[39m"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sorted(list: List[Int]): Boolean = \n",
+    "    list match {\n",
+    "        case head1 :: head2 :: tail => \n",
+    "            head1 < head2 && sorted(head2 :: tail)\n",
+    "        case _ => true\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres21\u001b[39m: \u001b[32mBoolean\u001b[39m = false"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(List(1,6,2,3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldRight\u001b[39m"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def foldRight[A, B](list: List[A])(\n",
+    "    nil: B, \n",
+    "    cons: (A, B) => B): B = \n",
+    "    list match {\n",
+    "        case Nil => nil\n",
+    "        case (head: A) :: (tail: List[A]) => \n",
+    "            val tailSol: B = foldRight(tail)(nil, cons)\n",
+    "            cons(head, tailSol): B\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sorted(list: List[Int]): Boolean = \n",
+    "    foldRight(list)(\n",
+    "        ??? : Boolean, \n",
+    "        (head: Int, tailSorted: Boolean) => \n",
+    "            /*\n",
+    "            tail match {\n",
+    "                case Nil => true\n",
+    "                case head2 :: tail2 => \n",
+    "                    head < head2 && tailSorted\n",
+    "            }\n",
+    "            */??? : Boolean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36msorted\u001b[39m"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sorted(list: List[Int]): Boolean = \n",
+    "    foldRight(list)(\n",
+    "        (Nil, true) : (List[Int], Boolean), \n",
+    "        (head: Int, tailSol: (List[Int], Boolean)) => \n",
+    "            tailSol._1 match {\n",
+    "                case Nil => \n",
+    "                    (head:: tailSol._1, true)\n",
+    "                case head2 :: tail2 => \n",
+    "                    (head :: tailSol._1, \n",
+    "                     head < head2 && tailSol._2)\n",
+    "            })._2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres28\u001b[39m: \u001b[32mBoolean\u001b[39m = false"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(List(1,2,7, 3,4,5)\n",
+    "      )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -211,14 +608,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mmultiply\u001b[39m"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "/*\n",
+    "\n",
     "def multiply(list: List[Int]): Int = \n",
-    "    foldRight(list)(1, (a, b) => a * b)\n",
-    "*/"
+    "    foldRight(list)(1)((a, b) => a * b)\n",
+    "    //list.foldRight(1)(_ * _)"
    ]
   },
   {
@@ -234,6 +642,34 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldRight\u001b[39m"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def foldRight[A, B](list: List[A])(\n",
+    "    nil: B)( \n",
+    "    cons: (A, B) => B): B = \n",
+    "    list match {\n",
+    "        case Nil => nil\n",
+    "        case (head: A) :: (tail: List[A]) => \n",
+    "            val tailSol: B = foldRight(tail)(nil)(cons)\n",
+    "            cons(head, tailSol): B\n",
+    "    }"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -317,6 +753,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def foldRight[A, B](list: List[A])(nil: B)(cons: (A, B) => B): B = ???\n",
     "def foldLeft[A, B](list: List[A])(b: B)(f: (B, A) => B): B = ???\n",
     "def filter[A](list: List[A])(f: A => Boolean): List[A] = ???\n",
     "def map[A, B](list: List[A])(f: A => B): List[B] = ???\n",
@@ -336,7 +773,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fold[A, B](opt: Option[A])(none: B)(some: A => B): B = ???\n",
+    "def foldRight[A, B](opt: Option[A])(none: B)(some: A => B): B = ???\n",
     "def filter[A](opt: Option[A])(f: A => Boolean): Option[A] = ???\n",
     "def map[A, B](opt: Option[A])(f: A => B): Option[B] = ???  \n",
     "def flatMap[A, B](opt: Option[A])(f: A => Option[B] ): Option[B] = ???"
@@ -348,7 +785,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fold[A, B, C](opt: Either[A, B])(left: A => C, right: B => C): C = ???\n",
+    "def foldRight[A, B, C](opt: Either[A, B])(\n",
+    "    left: A => C, right: B => C): C = ???\n",
     "def filter[A, B](opt: Either[A, B])(f: B => Boolean): Either[A, B] = ???\n",
     "def map[A, B, C](opt: Either[A, B])(f: B => C): Either[A, C] = ???  \n",
     "def flatMap[A, B, C](opt: Either[A, B])(f: B => Either[A, C] ): Either[A, C] = ???"
@@ -395,7 +833,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reverse[A](list: List[A]): List[A] = ???"
+    "// out / aux\n",
+    "Nil\n",
+    "1 :: 2 :: 3 :: Nil\n",
+    "//\n",
+    "1 :: Nil\n",
+    "2 :: 3 :: Nil\n",
+    "// \n",
+    "2 :: (1 :: Nil)\n",
+    "3 :: Nil\n",
+    "//\n",
+    "3 :: (2 :: (1 :: Nil))\n",
+    "Nil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mreverse\u001b[39m"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def reverse[A](list: List[A]): List[A] =  {\n",
+    "    var out: List[A] = Nil\n",
+    "    for (e <- list)\n",
+    "        out = e :: out\n",
+    "    out\n",
+    "}"
    ]
   },
   {
@@ -403,6 +877,107 @@
    "metadata": {},
    "source": [
     "The following implementation abstracts away the differences in the above functions, and declares two additional parameters: the initial value of a mutable variable, and the update function executed in every step of the loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldLeft\u001b[39m"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// def sorted(list: List[Int]): Boolean\n",
+    "// def length[A](list: List[A]): Int\n",
+    "// def reverse[A](list: List[A]): List[A]\n",
+    "def foldLeft[A, B](list: List[A])(\n",
+    "        initial: B,\n",
+    "        update: (B, A) => B): B =  {\n",
+    "    var out: B = initial\n",
+    "    for (e <- list)\n",
+    "        out = update(out: B, e)\n",
+    "    out\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mreverse\u001b[39m"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def reverse[A](list: List[A]): List[A] = \n",
+    "    foldLeft(list)(\n",
+    "        Nil : List[A], \n",
+    "        (e: A, out: List[A]) => \n",
+    "            e :: out : List[A])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mreverse\u001b[39m"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def reverse[A](list: List[A]): List[A] = \n",
+    "    list.foldLeft[List[A]](\n",
+    "        Nil)(\n",
+    "        (out, e) => \n",
+    "            e :: out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlength\u001b[39m"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def length[A](list: List[A]): Int = \n",
+    "    list.foldLeft(0)(\n",
+    "        (out: Int, _: A) => out + 1\n",
+    "    )"
    ]
   },
   {
