Live coding session 9 - Móstoles

--- a/PF-3/templates/3.1-HigherOrderFunctions.ipynb
+++ b/PF-3/templates/3.1-HigherOrderFunctions.ipynb
@@ -16,9 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36m$ivy.$                               \n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36m_root_.org.scalatest._\u001b[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import $ivy.`org.scalatest::scalatest:3.0.8`\n",
     "import _root_.org.scalatest._"
@@ -69,22 +82,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36msum\u001b[39m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sum(list: List[Int]): Int = \n",
-    "    ???"
+    "    list match {\n",
+    "        case Nil => 0 : Int\n",
+    "        case head :: tail =>\n",
+    "            val tailSum: Int = sum(tail)\n",
+    "            head + tailSum : Int\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mmultiply\u001b[39m"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def multiply(list: List[Int]): Int = \n",
-    "    ???"
+    "    list match {\n",
+    "        case Nil => 1 : Int\n",
+    "        case head :: tail =>\n",
+    "            val tailSum: Int = multiply(tail)\n",
+    "            head * tailSum : Int\n",
+    "    }"
    ]
   },
   {
@@ -92,6 +137,32 @@
    "metadata": {},
    "source": [
     "These functions clearly share a common logic: their only differences are the value which is returned when the list is empty, and the function used to combine numbers (`+` and `*`, respectively). We can abstract away these differences and arrive to a more generic function which encodes that common logic:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcombine\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def combine(list: List[Int])(nil: Int, cons: (Int, Int) => Int ): Int = \n",
+    "    list match {\n",
+    "        case Nil => nil : Int\n",
+    "        case head :: tail =>\n",
+    "            val tailSol: Int = combine(tail)(nil, cons)\n",
+    "            cons(head , tailSol) : Int\n",
+    "    }"
    ]
   },
   {
@@ -110,22 +181,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36msum\u001b[39m"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sum(list: List[Int]): Int = \n",
-    "    ???"
+    "    combine(list)(\n",
+    "        0 : Int, \n",
+    "        (head: Int, tailSol: Int) => \n",
+    "            head + tailSol : Int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36msum\u001b[39m"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sum(list: List[Int]): Int = \n",
+    "    combine(list)(0, _ + _)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mmultiply\u001b[39m"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def multiply(list: List[Int]): Int = \n",
-    "    ???"
+    "    combine(list)(1, _ * _)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mreverse\u001b[39m"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def reverse(list: List[Int]): List[Int] = \n",
+    "    list match {\n",
+    "        case Nil => \n",
+    "            Nil : List[Int]\n",
+    "        case head :: tail =>\n",
+    "            val tailReversed: List[Int] = reverse(tail)\n",
+    "            tailReversed :+ head : List[Int]\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mduplicateHeads\u001b[39m"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def duplicateHeads(list: List[Int]): List[Int] = \n",
+    "    list match {\n",
+    "        case Nil => \n",
+    "            List() : List[Int]\n",
+    "        case head :: tail => \n",
+    "            val tailDuplicated: List[Int] = duplicateHeads(tail)\n",
+    "            head :: head :: tailDuplicated : List[Int]\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcombine\u001b[39m"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def combine(list: List[Int])(\n",
+    "        nil: List[Int], cons: (Int, List[Int]) => List[Int] ): List[Int] = \n",
+    "    list match {\n",
+    "        case Nil => \n",
+    "            nil: List[Int]\n",
+    "        case head :: tail => \n",
+    "            val tailSol: List[Int] = combine(tail)(nil, cons)\n",
+    "            cons(head, tailSol) : List[Int]\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mduplicateHeads\u001b[39m"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def duplicateHeads(list: List[Int]): List[Int] = \n",
+    "    combine(list)(List(),\n",
+    "        (head, tailSol) => head :: head :: tailSol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mreverse\u001b[39m"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def reverse(list: List[Int]): List[Int] = \n",
+    "    combine(list)(\n",
+    "        Nil : List[Int],\n",
+    "        (head: Int, tailReversed: List[Int]) => \n",
+    "            tailReversed :+ head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres13\u001b[39m: \u001b[32mBoolean\u001b[39m = true"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duplicateHeads(List(1,2,3)) == List(1,1,2,2,3,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres11\u001b[39m: \u001b[32mList\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mList\u001b[39m(\u001b[32m4\u001b[39m, \u001b[32m3\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m1\u001b[39m)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reverse(List(1,2,3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres9\u001b[39m: \u001b[32mList\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mList\u001b[39m(\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m3\u001b[39m, \u001b[32m4\u001b[39m)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "List(1,2,3) :+ 4"
    ]
   },
   {
@@ -141,6 +446,195 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcombine\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def combine(list: List[Int])(nil: Int, cons: (Int, Int) => Int ): Int = \n",
+    "    list match {\n",
+    "        case Nil => nil : Int\n",
+    "        case head :: tail =>\n",
+    "            val tailSol: Int = combine(tail)(nil, cons)\n",
+    "            cons(head , tailSol) : Int\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcombine\u001b[39m"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def combine(list: List[Int])(\n",
+    "        nil: List[Int], cons: (Int, List[Int]) => List[Int] ): List[Int] = \n",
+    "    list match {\n",
+    "        case Nil => \n",
+    "            nil: List[Int]\n",
+    "        case head :: tail => \n",
+    "            val tailSol: List[Int] = combine(tail)(nil, cons)\n",
+    "            cons(head, tailSol) : List[Int]\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldRight\u001b[39m"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def foldRight[\n",
+    "        A, \n",
+    "        B](\n",
+    "        list: List[A])(\n",
+    "        nil: B, \n",
+    "        cons: (A, B) => B ): B = \n",
+    "    list match {\n",
+    "        case Nil => \n",
+    "            nil: B\n",
+    "        case head :: tail => \n",
+    "            val tailSol: B = foldRight(tail)(nil, cons)\n",
+    "            cons(head, tailSol) : B\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldRight\u001b[39m"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def foldRight[A, B](\n",
+    "        list: List[A])(\n",
+    "        nil: B)(cons: (A, B) => B ): B = \n",
+    "    list match {\n",
+    "        case Nil => \n",
+    "            nil: B\n",
+    "        case head :: tail => \n",
+    "            val tailSol: B = foldRight(tail)(nil)(cons)\n",
+    "            cons(head, tailSol) : B\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36msum\u001b[39m"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sum(list: List[Int]): Int = \n",
+    "    foldRight(\n",
+    "        list)(\n",
+    "        0)(\n",
+    "        (head, tailSum) => head + tailSum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcombine\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def combine(list: List[Int])(\n",
+    "        nil: Int, cons: (Int, Int) => Int ): Int = \n",
+    "    list match {\n",
+    "        case Nil => nil : Int\n",
+    "        case head :: tail =>\n",
+    "            val tailSol: Int = combine(tail)(nil, cons)\n",
+    "            cons(head , tailSol) : Int\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mreverse\u001b[39m"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def reverse(list: List[Int]): List[Int] = \n",
+    "    list.foldRight(\n",
+    "        List[Int]())(\n",
+    "        (head, tailReversed) => tailReversed :+ head)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -384,7 +878,7 @@
     "def length[A](list: List[A]): Int = {\n",
     "    var out: Int = 0\n",
     "    for (e <- list)\n",
-    "        out += 1\n",
+    "        out = out + 1\n",
     "    out\n",
     "}"
    ]
@@ -395,7 +889,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reverse[A](list: List[A]): List[A] = ???"
+    "def reverse[A](list: List[A]): List[A] = {\n",
+    "    var out: List[A] = Nil\n",
+    "    for (e <- list)\n",
+    "        out = e :: out\n",
+    "    out\n",
+    "}"
    ]
   },
   {
@@ -413,6 +912,32 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldLeft\u001b[39m"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def foldLeft[A, B](list: List[A])(\n",
+    "        initial: B, update: (B, A) => B ): B = {\n",
+    "    var out: B = initial\n",
+    "    for (e: A <- list)\n",
+    "        out = update(out, e)\n",
+    "    out\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -421,13 +946,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldLeft\u001b[39m"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "//@annotation.tailrec\n",
+    "@annotation.tailrec\n",
     "def foldLeft[A, B](list: List[A])(out: B)(update: (B, A) => B): B =\n",
-    "    ???"
+    "    list match {\n",
+    "        case Nil => out\n",
+    "        case e :: tail => \n",
+    "            foldLeft(tail)(update(out, e))(update)\n",
+    "    }"
    ]
   },
   {
@@ -444,7 +984,30 @@
    "outputs": [],
    "source": [
     "def length[A](list: List[A]): Int = \n",
-    "    ???"
+    "    list.foldLeft(0 : Int)(\n",
+    "        (out: Int, e: A) => out+1 : Int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlength\u001b[39m"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def length[A](list: List[A]): Int = \n",
+    "    list.foldRight(0 : Int)(\n",
+    "        (head: A, tailSol: Int) => tailSol+1 : Int)"
    ]
   },
   {
@@ -454,17 +1017,30 @@
    "outputs": [],
    "source": [
     "def sum(list: List[Int]): Int = \n",
-    "    ???"
+    "    list.foldLeft(0 : Int)(\n",
+    "        (out: Int, e: A) => out+e : Int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mreverse\u001b[39m"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def reverse[A](list: List[A]): List[A] = \n",
-    "    ???"
+    "    list.foldLeft(Nil : List[A])(\n",
+    "        (out: List[A], e: A) => e :: out : List[A])"
    ]
   },
   {
